src/snapshots/tap_parser__test__single_sucess_no_num_bare_desc.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            1..1\n            ok this is a bare description - with a dash!\n        \"\n            }).unwrap()"
---
- Plan:
    count: 1
    reason: ~
- TestPoint:
    result: true
    number: ~
    desc: this is a bare description - with a dash!
    directive: ~
    yaml: []

