src/snapshots/tap_parser__test__single_sucess_skip_mixed_case.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            1..1\n            ok 1 - desc # sKiP\n        \"\n            }).unwrap()"
---
- Plan:
    count: 1
    reason: ~
- TestPoint:
    result: true
    number: 1
    desc: desc
    directive:
      kind: Skip
      reason: ~
    yaml: []

