src/snapshots/tap_parser__test__single_sucess_skip_reason_as_subtest.snap
---
source: src/test.rs
expression: parser.parse(&nested_doc).unwrap()
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: inner
    statements:
      - Plan:
          count: 1
          reason: ~
      - TestPoint:
          result: true
          number: 1
          desc: desc
          directive:
            kind: Skip
            reason: has no power
          yaml: []
    ending:
      result: true
      number: 1
      desc: inner
      directive: ~
      yaml: []

